# sst-forecasting

./: .gitignore  AI_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  Context.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: convlstm.yaml  default.yaml  lstm.yaml  transformer.yaml
data/: README.md
experiments/: lstm_debug_summary.txt  optuna_convlstm.db  optuna_informer.db  optuna_lstm.db  optuna_patch.db  optuna_study.db  optuna_transformer.db  patch_transformer_debug_summary.txt  pipeline_log.txt  queue_log.txt  queue_log_2.txt  retrain_log.txt  transformer_debug_summary.txt
scripts/: aggregate_seed_results.py  backfill_seed_in_config.py  bench_convlstm_batch.py  build_zarr.py  compare_runs.py  download_oisst.py  optuna_plots.py  plot_ar_aggregate.py  plot_heatmap.py  plot_results.py  queue_after_optuna.py  queue_pipeline.py  report_model.py  retrain_best.py  retrain_best_patch_transformer.py  run_alpha_ablation.py  run_ar_rollout.py  run_ar_rollout_7day.py  run_ar_rollout_avg.py  run_baselines.py  run_convlstm_then_final.py  run_e0_local.sh  run_final_pipeline.py  run_full_attn_informer_experiment.py  run_informer_experiment.py  run_lstm_experiment.py  run_optuna_convlstm.py  run_optuna_informer.py  run_optuna_lstm.py  run_optuna_patch_transformer.py  run_optuna_search.py  run_optuna_transformer.py  run_patch_transformer_experiment.py  run_preso_extras.py  run_probsparse_informer_experiment.py  run_report_pipeline.py  run_rnn_baseline_experiment.py  run_seed_queue.py  run_transformer_experiment.py  (+5 more)
(+22038 files in other folders)
