[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "sst-forecasting"
version = "0.1.0"
description = "Benchmarking recurrent vs attention models for SST forecasting (COMP3242)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=2023.6",
    "netCDF4>=1.6",
    "zarr>=2.16,<3.0",
    "dask[array]>=2023.6",
    "scipy>=1.11",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "rich>=13.5",
    "tqdm>=4.66",
    "requests>=2.31",
]

[project.scripts]
sstf = "sst_forecasting.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
